--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -4,22 +4,27 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.define "cent7gui" do |cent7gui|
+  config.vm.boot_timeout = 600
+  config.vm.provider "virtualbox" do |vb|
+	  vb.gui = false
+	  vb.cpus = 1
+	  vb.memory = 64
+  end
+  config.vm.define "cent7gui", primary: true do |cent7gui|
     #  name for VM
     cent7gui.vm.hostname = "centos7-gui"
     cent7gui.vm.network :private_network, ip: "192.168.56.100"
     cent7gui.vm.box = "centos/7"
+	cent7gui.vm.boot_timeout = 180
     cent7gui.vm.provider "virtualbox" do |vb|
       # Display the VirtualBox GUI when booting the machine
       vb.gui = true
       # Customize the amount of memory on the VM:
-      vb.memory = 1024
+      vb.memory = 512
     end
     # simple configure
     cent7gui.vm.provision "shell", inline: <<-SHELL
-    yum -y install epel-release
     yum -y group install "@gnome-desktop" "@x11"
-    yum -y update
     yum -y autoremove
     yum -y clean all
 	systemctl set-default graphical.target
@@ -28,42 +33,35 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   end
   
   config.vm.define "web01" do |web01|
-    web01.vm.box = "ubuntu/trusty64"
+    web01.vm.box = "ubuntu/bionic64"
     web01.vm.hostname = "web01"
     web01.vm.network :private_network, ip: "192.168.56.101"
-	web01.vm.provider "virtualbox" do |vb|
-	  vb.gui = false
-	  vb.memory = 64
-    end
   end
 
   config.vm.define "web02" do |web02|
     web02.vm.box = "centos/7"
     web02.vm.hostname = "web02"
     web02.vm.network :private_network, ip: "192.168.56.102"
-	web02.vm.provider "virtualbox" do |vb|
-	  vb.gui = false
-	  vb.memory = 64
-    end
   end
+
   config.vm.define "centos6" do |centos6|
     centos6.vm.box = "generic/centos6"
     centos6.vm.hostname = "centos6"
     centos6.vm.network :private_network, ip: "192.168.56.104"
-	centos6.provider "virtualbox" do |vb|
-	  vb.gui = false
-	  vb.memory = 64
-    end
   end
+  
   config.vm.define "centos7" do |centos7|
     centos7.vm.box = "centos/7"
     centos7.vm.hostname = "centos7"
     centos7.vm.network :private_network, ip: "192.168.56.105"
-	centos7.vm.provider "virtualbox" do |vb|
-	  vb.gui = false
-	  vb.memory = 64
-	end
   end
+
+  config.vm.define "ubuntu" do |ubuntu|
+    ubuntu.vm.box = "ubuntu/bionic64"
+    ubuntu.vm.hostname = "ubuntu"
+    ubuntu.vm.network :private_network, ip: "192.168.56.105"
+  end
+
   config.vm.define "awx" do |awx|
     awx.vm.box = "centos/8"
     awx.vm.hostname = "awx"
@@ -93,5 +91,3 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   SHELL
   end
 end
-
-
