Setup .ssh/config for vagrant - not to keep host hash

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -20,6 +20,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.ssh.keys_only = false
   config.ssh.private_key_path = ["vagrant-rsa", "~/.vagrant.d/insecure_private_key"]
   config.vm.provision "file", source: "vagrant-rsa.pub", destination: "~/.ssh/authorized_keys"
+  config.vm.provision "file", source: "ssh-config", destination: "~/.ssh/config"
+  config.vm.provision "shell", inline: <<-SHELL
+    chmod 600 ~vagrant/.ssh/config
+	# Enable Password login for sshd
+	sed -i.bak 's/^PasswordAuthentication\ no/PasswordAuthentication\ yes/' /etc/ssh/sshd_config
+	service sshd restart
+  SHELL
   
   config.vm.define "cent7gui", primary: true do |cent7gui|
     #  name for VM
@@ -48,9 +55,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       yum -y autoremove firstboot gnome-initial-setup
       yum -y autoremove
       yum -y clean all
-	  # Enable Password login for sshd
-	  sed -i.bak 's/^PasswordAuthentication\ no/PasswordAuthentication\ yes/' /etc/ssh/sshd_config
-    SHELL
+	SHELL
   end
   
   config.vm.define "centos6" do |centos6|
@@ -61,11 +66,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 	  # vm name
 	  vb.name = "centos6-web"
 	end
-	centos6.vm.provision "shell", inline: <<-SHELL
-	  # Enable Password login for sshd
-	  sed -i.bak 's/^PasswordAuthentication\ no/PasswordAuthentication\ yes/' /etc/ssh/sshd_config
-	  service sshd restart
-    SHELL
   end
   
   config.vm.define "centos7" do |centos7|
@@ -76,11 +76,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 	  # vm name
 	  vb.name = "centos7-web"
 	end
-	centos7.vm.provision "shell", inline: <<-SHELL
-	  # Enable Password login for sshd
-	  sed -i.bak 's/^PasswordAuthentication\ no/PasswordAuthentication\ yes/' /etc/ssh/sshd_config
-	  systemctl restart sshd
-    SHELL
   end
 
   config.vm.define "ubuntu" do |ubuntu|
@@ -91,11 +86,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 	  # vm name
 	  vb.name = "ubuntu-web"
 	end
-	ubuntu.vm.provision "shell", inline: <<-SHELL
-	  # Enable Password login for sshd
-	  sed -i.bak 's/^PasswordAuthentication\ no/PasswordAuthentication\ yes/' /etc/ssh/sshd_config
-	  systemctl restart sshd
-    SHELL
   end
 
   config.vm.define "awx", autostart: false do |awx|
@@ -112,9 +102,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 	  end
 	  awx.vm.provision "file", source: "inventory", destination: "/var/tmp/"
 	  awx.vm.provision "shell", inline: <<-SHELL
-  	  # Enable Password login for sshd
-	  sed -i.bak 's/^PasswordAuthentication\ no/PasswordAuthentication\ yes/' /etc/ssh/sshd_config
-	  systemctl restart sshd
 	  # Official steps: https://github.com/ansible/awx/blob/17.0.1/INSTALL.md
 	  # The below steps are from https://howto.lintel.in/install-ansible-tower-awx-centos-7/
 	  ## Install dependencies
