--- a/ansible/my-setup.yml
+++ b/ansible/my-setup.yml
@@ -36,8 +36,7 @@
     - name: Install ansible
       package:
         name: ansible
-        state: installed
-        
+        state: present
     - name: Install python3
       package:
         name: python3
@@ -50,7 +49,7 @@
           - php-mysql
         state: installed
       notify:
-        - 
+        - Enable mysql
     - name: Install LAMP - CentOS
       when:
         - ansible_distribution == "CentOS"
@@ -100,16 +99,25 @@
       service:
         name: httpd
         enabled: yes
-        status: restarted
+        status: started
     - name: Enable and start apache2
       service:
         name: apache2
         enabled: yes
-        status: restarted
+        status: started
     - name: Enable and start mysql-server
+      when:
+        - ansible_distribution == "CentOS"
+      listen: Enable mysql
       service:
         name: mysqld
         enabled: yes
         status: started
-
-    
+    - name: Enable and start mysql-server
+      when:
+        - ansible_distribution == "Ubuntu"
+      listen: Enable mysql
+      service:
+        name: mysql
+        enabled: yes
+        status: started
