Only update apt cache

--- a/ansible/my-setup.yml
+++ b/ansible/my-setup.yml
@@ -28,11 +28,10 @@
       when:
         - ansible_distribution == "Ubuntu"
       block:
-        - name: Install aptitude
+        - name: Update apt cache
           apt: 
-            name: "aptitude"
-            state: latest
             update_cache: yes
+            cache_valid_time: 5
 
     - name: Install ansible
       package:
