--- a/ansible/my-setup.yml
+++ b/ansible/my-setup.yml
@@ -101,10 +101,12 @@
           <title>Test page for LCA2022</title>
           <body>
           <h1>LCA2022 - Test landing page</h1>
-          Welcome to LCA2022!
+          <h2>{{ ansible_hostname }}</h2>
+          <p>Welcome to LCA2022!<p>
+          This is running on {{ ansible_hostname, OS: {{ ansible_distribution }}, Version: {{ ansible_distribution_major_version }}
           </body>
           </html>
-          
+ 
     - name: Create customize info.php
       blockinfile:
         path: /var/www/html/info.php
