--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -8,7 +8,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provider "virtualbox" do |vb|
 	  vb.gui = false
 	  vb.cpus = 1
-	  vb.memory = 256
+	  vb.memory = 512
 	  # create a master VM before creating the linked clones
       vb.linked_clone = true
 	  # Only use 50% of host CPU
@@ -41,7 +41,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       # Display the VirtualBox GUI when booting the machine
       #vb.gui = true
       # Customize the amount of memory on the VM:
-      vb.memory = 512
+      #vb.memory = 512
 	  # vm name
 	  vb.name = "centos7-mgt"
     end
@@ -104,7 +104,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     ubuntu20.vm.network "private_network", ip: "192.168.56.107"
 	ubuntu20.vm.provider "virtualbox" do |vb|
 	  # Customize the amount of memory on the VM:
-      vb.memory = 512
+      vb.memory = 1024
 	  # vm name
 	  vb.name = "ubuntu20"
 	end
