--- a/ansible/roles/CentOS/tasks/main.yml
+++ b/ansible/roles/CentOS/tasks/main.yml
@@ -1,2 +1,18 @@
 ---
 # tasks file for CentOS
+- name: Enable EPEL repo
+  yum:
+    name: epel-release
+    state: latest
+    update_cache: yes
+- name: Install additional packages
+  yum:
+    name: "{{ install_pkgs }}"
+    state: latest
+    update_cache: yes
+- name: Remove unwanted packages
+  yum:
+    name: "{{ remove_pkgs }}"
+    state: absent
+    autoremove: yes
+    update_cache: yes
