--- a/ansible/roles/CentOS/defaults/main.yml
+++ b/ansible/roles/CentOS/defaults/main.yml
@@ -1,9 +1,12 @@
 ---
 # defaults file for CentOS
 install_pkgs:
+  - ansible
   - libselinux-python
 
 remove_pkgs:
   - telnet-server
   - talk-server
+  - yp-tools
+  - ypbind
   - ypserv
