--- a/ansible/roles/lamp/handlers/main.yml
+++ b/ansible/roles/lamp/handlers/main.yml
@@ -1,2 +1,22 @@
 ---
 # handlers file for lamp
+- name: Enable httpd
+  service:
+    name: httpd
+    enabled: yes
+    state: started
+- name: Enable mysql in CentOS
+  service:
+    name: mysqld
+    enabled: yes
+    state: started
+- name: Enable apache2
+  systemd:
+    name: apache2
+    enabled: yes
+    state: started
+- name: Enable mysql in Ubuntu
+  service:
+    name: mysql
+    enabled: yes
+    state: started
