Update cache when libselinux-python

--- a/ansible/my-setup.yml
+++ b/ansible/my-setup.yml
@@ -28,6 +28,7 @@
             name:
               - libselinux-python
             state: installed
+            update_cache: yes
 
     - name: Setup for Ubuntu
       when:
