--- a/ansible/my-setup.yml
+++ b/ansible/my-setup.yml
@@ -27,7 +27,7 @@
           yum:
             name:
               - libselinux-python
-            state: installed
+            state: present
             update_cache: yes
 
     - name: Setup for Ubuntu
@@ -37,7 +37,11 @@
         - name: Update apt cache
           apt: 
             update_cache: yes
-            cache_valid_time: 5
+        - name: Install libapache2-mod-php
+          apt:
+            name: libapache2-mod-php
+            state: present
+            update_cache: yes
 
     - name: Install ansible
       package:
